--- a/index.HTML
+++ b/index.HTML
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Love Forever</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel = "stylesheet"  href = "style1.css">
+  <link rel = "stylesheet"  href = "style.css">
   
 </head>
 <body>
@@ -43,4 +43,5 @@
     }
   </script>
 </body>
+
 </html>
